fixes tabs alignments restapi

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -3856,8 +3856,6 @@ input[type="text"] {
 
     .keys {
       border-right: 1px solid #D2DDEC!important;
-      margin-left: 20px;
-      margin-right: 20px;
       min-height: 90px;
     }
 
